Fix z-index

--- a/src/assets/scss/sr-redesign/sr_famous_resume.scss
+++ b/src/assets/scss/sr-redesign/sr_famous_resume.scss
@@ -85,7 +85,7 @@
             position: sticky;
             top: 0;
             width: 100%;
-            z-index: $zindex-navbar - 1;
+            z-index: 99;
             background: #fff;
         }
 
